force-app/main/default/objects/KicksawEng__Integration__c/fields/Apex_Class_for_Retry__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_for_Retry__c</fullName>
    <inlineHelpText>API name of the Apex Class that the records will be used for retry. This Apex class needs to extend the RetryIntegrationAbstractQueuable class</inlineHelpText>
    <label>Apex Class for Retry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>