force-app/main/default/objects/KicksawEng__Integration__c/fields/Enable_Retry__c.field-meta.xml
<CustomField>
    <fullName>Enable_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Retry</label>
    <type>Checkbox</type>
</CustomField>