force-app/main/default/objects/KicksawEng__Integration__c/fields/KicksawEng__LatestExecution__c.field-meta.xml
<CustomField>
    <fullName>KicksawEng__LatestExecution__c</fullName>
    <description>The time which the latest execution of the integration ran.</description>
    <label>Latest Execution</label>
    <summarizedField>KicksawEng__IntegrationExecution__c.CreatedDate</summarizedField>
    <summaryForeignKey>KicksawEng__IntegrationExecution__c.KicksawEng__Integration__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>