force-app/main/default/objects/KicksawEng__Integration__c/fields/Maximum_Retries__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Retries__c</fullName>
    <inlineHelpText>This is the number of retries to attempt</inlineHelpText>
    <label>Maximum Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>