force-app/main/default/objects/KicksawEng__Integration__c/fields/Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>Retry_Interval__c</fullName>
    <inlineHelpText>Duration between retries, need to be in increment of 15 minutes.</inlineHelpText>
    <label>Retry Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>