force-app/main/default/objects/KicksawEng__Integration__c/fields/Status_Codes_to_Retry__c.field-meta.xml
<CustomField>
    <fullName>Status_Codes_to_Retry__c</fullName>
    <inlineHelpText>Comma-separated list of HTTP status codes to retry the execution e.g. 400,408,429</inlineHelpText>
    <label>Status Codes to Retry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>